@@ -1706,3 +1706,6 @@ DATA:
         0.174399977 2.2877275 1.615689
         0.177399977 2.3314531 1.564728
         0.180999976 2.3465461 1.515407
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
