@@ -1487,3 +1487,6 @@ DATA:
         19.5250695 3.1899501 0.001673411
         20.0006755 3.1891914 0.00159354
         21.53810759 3.1871725 0.001382963
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
