@@ -371,3 +371,6 @@ DATA:
         9.73856367 2.463771111 0.111442103
         9.907412723 2.463522984 0.113357189
         10.07918931 2.463270371 0.115321633
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
