@@ -1855,3 +1855,6 @@ DATA:
         0.301111911 0.67365232 0.86865443
         0.307338434 0.65093367 0.90431824
         0.316348631 0.620013 0.95185728
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
