@@ -1272,3 +1272,6 @@ DATA:
         0.190744346 1.2690821 1.411297819
         0.198373906 1.3113567 1.43999713
         0.206638625 1.3595125 1.468694375
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
