@@ -1336,3 +1336,6 @@ DATA:
         0.248465305 1.2739081 1.2602486
         0.310737312 1.2870734 1.49879
         0.382667245 1.2850447 1.8
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
