@@ -1755,3 +1755,6 @@ DATA:
         0.131999993 0.65220651 0.3498872
         0.141299993 0.63622176 0.4552527
         0.149199984 0.62519112 0.5091176
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
