@@ -1060,3 +1060,6 @@ DATA:
         0.309960469 1.4490819 1.5286501
         0.381489807 1.5259569 1.8576665
         0.413280625 1.5484902 1.970848
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
