@@ -2219,3 +2219,6 @@ DATA:
         579365.3618 5593.8159 2052.1027
         635816.3458 6088.1496 1796.7561
         700475.6352 -256.29294 1265.305
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
