@@ -1713,3 +1713,6 @@ DATA:
         0.049102648 0.92382524 0.008583189
         0.04934694 0.92283196 0.008714914
         0.049593675 0.92182723 0.008844205
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
