@@ -1601,3 +1601,6 @@ DATA:
         0.25102248 1.7645028 1.7752333
         0.28696722 1.8721044 1.8375833
         0.323113894 1.9507722 1.9289333
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
