@@ -515,3 +515,6 @@ DATA:
         108.8637143 3.5874411 0.024474921
         119.7500878 3.5865417 0.022540169
         131.7250957 3.5859895 0.02041864
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
