@@ -1284,3 +1284,6 @@ DATA:
         0.165399982 1.6395202 0.89085728
         0.174299982 1.7175608 0.85922997
         0.177120268 1.7369413 0.843139
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
