@@ -1131,3 +1131,6 @@ DATA:
         0.203810753 0.8250231 0.87274252
         0.206640819 0.84318765 0.871339798
         0.212037407 0.86941883 0.862631647
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
