@@ -630,3 +630,6 @@ DATA:
         654.2896129 2.65586071 0.004820334
         668.0804806 2.656274251 0.004711321
         682.162027 2.657407133 0.004604559
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
