@@ -1618,3 +1618,6 @@ DATA:
         0.39459461 1.6923149 2.1675
         0.447798371 1.8744849 2.3733333
         0.480311785 1.9780185 2.4766667
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
